@@ -13,12 +13,12 @@ import {
   AvailablePlants,
   DeliveryMission,
   Plantation,
-  PlantedField,
   SeasonData,
   Seasons,
 } from '../../modules/fazendinha/types.js';
 import { millisToSeconds } from '../../utils/miscUtils.js';
 import { registerCacheStatus } from '../../structures/initializePrometheus.js';
+import { getQuality } from '../../modules/fazendinha/siloUtils.js';
 
 const parseMongoUserToRedisUser = (user: DatabaseFarmerSchema): DatabaseFarmerSchema => ({
   id: `${user.id}`,
@@ -79,16 +79,20 @@ const updateItems = async (farmerId: BigString, items: QuantitativeItem[]): Prom
 const executeHarvest = async (
   farmerId: BigString,
   plantations: DatabaseFarmerSchema['plantations'],
-  plant: AvailablePlants,
   success: boolean,
   silo: DatabaseFarmerSchema['silo'],
-  weight: number,
+  added: DatabaseFarmerSchema['silo'],
 ): Promise<void> => {
+  const experience = added.reduce(
+    (p, c) => p + Math.floor(c.weight * ((c.plant + 1) * (5 + getQuality(c)))),
+    0,
+  );
+
   const updatedUser = await farmerModel.findOneAndUpdate(
     { id: `${farmerId}` },
     {
       $set: { plantations, silo },
-      ...(success ? { $inc: { experience: Math.floor(weight * ((plant + 1) * 5)) } } : {}),
+      ...(success ? { $inc: { experience } } : {}),
     },
     {
       new: true,
@@ -126,25 +130,21 @@ const updateSeeds = async (farmerId: BigString, seeds: QuantitativeSeed[]): Prom
 
 const executePlant = async (
   farmerId: BigString,
-  fieldIndex: number,
-  field: PlantedField,
+  plantations: DatabaseFarmerSchema['plantations'],
   seed: AvailablePlants,
+  seeds: DatabaseFarmerSchema['seeds'],
 ): Promise<void> => {
-  if (typeof field.weight === 'number' && field.weight < 0)
+  if (plantations.some((a) => a.isPlanted && a.weight && a.weight < 0))
     throw new Error(
-      `Negative weight for farmer ${farmerId}. FieldIndex: ${fieldIndex}. Seed: ${seed}. Field: ${JSON.stringify(field)}`,
+      `Negative weight for farmer ${farmerId}. Plantations=${JSON.stringify(plantations)}. Seed: ${seed}`,
     );
 
   const updatedUser = await farmerModel.findOneAndUpdate(
     { id: `${farmerId}` },
     {
-      $set: { [`plantations.${fieldIndex}`]: field, lastPlantedSeed: seed },
-      $inc: {
-        [`seeds.$[elem].amount`]: seed === AvailablePlants.Mate ? 0 : -1,
-      },
+      $set: { plantations, lastPlantedSeed: seed, seeds },
     },
     {
-      arrayFilters: [{ 'elem.plant': seed }],
       new: true,
     },
   );
